--- a/themes/fexo/_config.yml
+++ b/themes/fexo/_config.yml
@@ -12,16 +12,16 @@ favicon: /favicon.ico
 # For seo
 keywords: deep learning,machine learning,object detection,object classification,tracking
 
-home_nav:
-  - name: Blog
-    url: /archives
-    target_blank: false #不在新页面打开
+# home_nav:
+#   - name: Blog
+#     url: /archives
+#     target_blank: false #不在新页面打开
   # - name: Project
     # url: /project/
     # target_blank: true #在新页面打开
-  - name: Github
-    url: https://github.com/batigooal
-    target_blank: true
+#   - name: Github
+#     url: https://github.com/batigooal
+#     target_blank: true
   # - name: Twitter
     # url: https://twitter.com/forsigner
     # target_blank: true
@@ -114,7 +114,7 @@ blog_name_font_familiy: calligraffittiregular
 # blog_name_font_familiy: Lobster-Regular
 # blog_name_font_familiy: PoiretOne-Regular
 
-init_page_content: HOME_NAV  # HOME_NAV | POST
+init_page_content: POST  # HOME_NAV | POST
 
 
 # =========================================================
