--- a/themes/pure/_config.yml
+++ b/themes/pure/_config.yml
@@ -5,8 +5,8 @@ menu:
   Categories: categories  # 分类
   Tags: tags  # 标签
   Repository: repository  # github repositories
-  # Books: books  # 豆瓣书单
-  # Links: links  # 友链
+  Books: books  # 豆瓣书单
+  Links: links  # 友链
   About: about  # 关于
 
 # Enable/Disable menu icons
@@ -17,12 +17,12 @@ menu_icons:
   categories: icon-folder
   tags: icon-tags
   repository: icon-project
-  # books: icon-book-fill
-  # links: icon-friendship
+  books: icon-book-fill
+  links: icon-friendship
   about: icon-cup-fill
 
 # rss
-# rss: /atom.xml
+rss: /atom.xml
 
 # Site
 site:
@@ -31,13 +31,14 @@ site:
     width: 40
     height: 40
     url: ../images/logo.png
-  title: Forever Batigol # 页面title
+  title: Hexo # 页面title
   favicon: /favicon.png
+  board: <p>欢迎交流与分享经验!</p> # 站点公告
   copyright: false # 底部版权信息
 
 # config
 config:
-  skin: theme-black # 主题颜色 theme-black theme-blue theme-green theme-purple
+  skin: # 主题颜色 theme-black theme-blue theme-green theme-purple
   layout: main-center # 布局方式 main-left main-center main-right
   toc: true # 是否开启文章章节目录导航
   menu_highlight: false # 是否开启当前菜单高亮显示
@@ -54,9 +55,11 @@ pagination:
 
 # Sidebar
 sidebar: right
-widgets: 
+widgets:
+  - board  
   - category
   - tag
+  - tagcloud
   - archive
   - recent_posts
 
@@ -77,27 +80,27 @@ search:
   baidu: false # you need to disable other search engines to use Baidu search
 
 # Donate
-# donate:
-#   enable: true
+donate:
+  enable: true
   # 微信打赏
-#   wechatpay:
-#     qrcode: images/donate/wechatpayimg.png
-#     title: 微信支付
+  wechatpay:
+    qrcode: images/donate/wechatpayimg.png
+    title: 微信支付
   # 支付宝打赏
-#   alipay: 
-#     qrcode: images/donate/alipayimg.png 
-#     title: 支付宝
+  alipay: 
+    qrcode: images/donate/alipayimg.png 
+    title: 支付宝
 
 # Share
 # weibo,qq,qzone,wechat,tencent,douban,diandian,facebook,twitter,google,linkedin
-# share:
-#   enable: true  # 是否启用分享
-#   sites: weibo,qq,wechat,facebook,twitter  # PC端显示的分享图标
-#   mobile_sites: weibo,qq,qzone  # 移动端显示的分享图标
+share:
+  enable: true  # 是否启用分享
+  sites: weibo,qq,wechat,facebook,twitter  # PC端显示的分享图标
+  mobile_sites: weibo,qq,qzone  # 移动端显示的分享图标
 
 # Github
 github: 
-  username: batigooal  # github username
+  username: cofess  # github username
 
 # Comment
 # Gitment
@@ -127,10 +130,10 @@ comment:
   # https://api.douban.com/v2/movie/coming_soon 即将上映的电影
   # https://api.douban.com/v2/movie/subject/:id 单个电影信息
   # https://api.douban.com/v2/movie/search?q={text} 电影搜索
-# douban:
-#   user: # 豆瓣用户名
-#   start: 0 # 从哪一条记录开始
-#   count: 100 # 获取豆瓣书单数据条数
+douban:
+  user: # 豆瓣用户名
+  start: 0 # 从哪一条记录开始
+  count: 100 # 获取豆瓣书单数据条数
   
 # PV
 pv:
@@ -163,53 +166,53 @@ fb_app_id:
 # profile
 profile:
   enabled: true # Whether to show profile bar
-  avatar: images/batigol.jpg
-  gravatar: batigooal@gmail.com # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-  author: 永心蓝白
-  author_title: Deep Learning
-  author_description: 不喜欢阿根廷的机器学习爱好者不是一个好码农
-  location: Wuhan, China
+  avatar: images/avatar.jpg
+  gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
+  author: 昵称
+  author_title: Web Developer & Designer
+  author_description: 个人简介。
+  location: Shenzhen, China
   follow: https://github.com/cofess
   # Social Links
-  # social:
-  #   links:
-  #     github: https://github.com/batigooal
-      # weibo: http://weibo.com/cofess
-      # twitter: https://twitter.com/iwebued
+  social:
+    links:
+      github: https://github.com/cofess
+      weibo: http://weibo.com/cofess
+      twitter: https://twitter.com/iwebued
       # facebook: /
       # dribbble: /
-      # behance: https://www.behance.net/cofess
-      # rss: atom.xml
-  #   link_tooltip: true # enable the social link tooltip, options: true, false
+      behance: https://www.behance.net/cofess
+      rss: atom.xml
+    link_tooltip: true # enable the social link tooltip, options: true, false
   # My Skills 
-  # skills:
-  #   Git: ★★★☆☆
-  #   Gulp: ★★★☆☆
-  #   Javascript: ★★★☆☆
-  #   HTML+CSS: ★★★☆☆
-  #   Bootstrap: ★★★☆☆
-  #   ThinkPHP: ★★★☆☆
-  #   平面设计: ★★★☆☆
+  skills:
+    Git: ★★★☆☆
+    Gulp: ★★★☆☆
+    Javascript: ★★★☆☆
+    HTML+CSS: ★★★☆☆
+    Bootstrap: ★★★☆☆
+    ThinkPHP: ★★★☆☆
+    平面设计: ★★★☆☆
   # My Personal Links
-  # links:
-  #   Github: https://github.com/cofess
-  #   Blog: http://blog.cofess.com
-  #   微博: http://weibo.com/cofess
-  #  花瓣: http://huaban.com/cofess
-  #   Behance: https://www.behance.net/cofess
+  links:
+    Github: https://github.com/cofess
+    Blog: http://blog.cofess.com
+    微博: http://weibo.com/cofess
+    花瓣: http://huaban.com/cofess
+    Behance: https://www.behance.net/cofess
   # My Personal Labels
-  # labels:
-  #   - 前端
-  #   - 前端开发
-  #   - 前端重构
-  #   - Web前端
-  #   - 网页重构
+  labels:
+    - 前端
+    - 前端开发
+    - 前端重构
+    - Web前端
+    - 网页重构
   # My Personal Works
-  # works:
-  #   name:
-  #     link: http://www.example.com
-  #     date: 2016
+  works:
+    name:
+      link: http://www.example.com
+      date: 2016
   # My Personal Projects
-  # projects:
-  #   cofess/gulp-startpro: https://github.com/cofess/gulp-startpro
-  #   cofess/hexo-theme-pure: https://github.com/cofess/hexo-theme-pure
+  projects:
+    cofess/gulp-startpro: https://github.com/cofess/gulp-startpro
+    cofess/hexo-theme-pure: https://github.com/cofess/hexo-theme-pure
